feat: 更新 java 示例